--- a/public/layout/css/landing.css
+++ b/public/layout/css/landing.css
@@ -1,15 +1,26 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 * {
     margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+body {
     font-family: 'Roboto', sans-serif;
+}
+.card-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .navbar {
     height: 100px;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 10px 20px 10px 20px;
+    padding: 10px 20px;
     width: 100%;
+    color: #fff;
 }
 
 .logo-bekantan {
@@ -18,10 +29,12 @@
 }
 
 .logo-bekantan a h1 {
-    margin: 0 auto;
+    margin: 0;
     color: orange;
     font-weight: bold;
+    font-size: 20px;
 }
+
 .logo-bekantan a h1 span {
     color: rgb(112, 194, 227);
 }
@@ -35,14 +48,13 @@
     display: flex;
     align-items: center;
     list-style: none;
-    font-size: 20px;
+    font-size: 15px;
     font-weight: bold;
-    margin-left: 50px;
 }
 
 .menu ul li a {
     color: #fff;
-    margin-right: 70px;
+    margin-right: 50px;
     cursor: pointer;
 }
 
@@ -61,12 +73,13 @@
 .content {
     display: flex;
     align-items: center;
+    justify-content: center;
     flex-direction: column;
     height: 100vh;
     text-align: center;
     background-image: url('/public/layout/images/back-fix.jpg');
-    background-size: 100% 100%;
-    background-position: center center;
+    background-size: cover;
+    background-position: center;
     background-repeat: no-repeat;
 }
 
@@ -74,7 +87,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 24px;
+    font-size: 20px;
     width: 50px;
     height: 50px;
   }
@@ -88,19 +101,19 @@
   }
 
 .icons-border i {
-    font-size: 25px;
+    font-size: 20px;
 }
 
 .gambar-content2 img {
-    height: 450px;
-    margin-right: 50px;
+    height: auto;
+    margin-right: 20px;
 }
 
 .padding-content {
     width: 100%;
     box-shadow: 3px 6px 12px rgba(0, 0, 0, 0.1);
     background-color: rgb(112, 194, 227);
-    color: white;
+    color: #fff;
     border-radius: 10px;
     padding: 20px;
 }
@@ -121,47 +134,33 @@
 
 .text-content {
     margin-bottom: 30px;
+    color: #fff;
 }
 
 .text-content h1 {
-    font-size: 50px;
     font-weight: bold;
     color: #fff;
 }
 
 .text-content p {
-    font-size: 20px;
+    font-size: 15px; /* Adjusted font size for better visibility */
     font-weight: bold;
     color: #fff;
 }
-.button-content button {
-    height: 60px;
-    width: 250px;
-    color: white;
-    font-size: 16px;
-    font-weight: bold;
-    margin-bottom: 20px;
-}
 
 .button-content p {
-    font-size: 18px;
+    font-size: 15px;
     font-weight: bold;
     color: #fff;
 }
 
 .content-2 {
-    height: 100vh;
-    color: #333; 
-    background-color: white;
-    margin: auto;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
+    height: auto;
+    padding: 30px;
+    background-color: #fff;
 }
 
 .content-2 h1 {
-    font-size: 50px; 
     font-weight: bold;
     text-align: center;
     margin-bottom: 20px; 
@@ -173,28 +172,26 @@
 }
 .last-content-2 p {
     text-align: center;
-    font-size: 20px;
+    font-size: 15px;
     font-weight: bold;
     color: gray;
 }
-.content-2 .text-content-2 {
-    padding-right: 30px;
+.text-content-2 {
     display: flex;
     align-items: center;
     justify-content: center;
     text-align: justify;
-    font-size: 18px;
+    font-size: 15px; /* Adjusted font size for better visibility */
     margin: 0 auto;
     padding-bottom: 30px;
 }
 
 .content-3 {
-    height: 100vh;
+    height: auto;
 }
 
 .content-3 h1 {
     text-align: center;
-    font-size: 50px;
     font-weight: bold;
 }
 
@@ -207,7 +204,7 @@
 }
 
 .content-3 p {
-    font-size: 20px;
+    font-size: 15px;
     font-weight: bold;
     color: gray;
     margin-bottom: 50px;
@@ -215,9 +212,9 @@
 
 .template-item {
     margin: 10px auto;
-    max-width: 450px;
-    height: 450px;
-    background-color: white;
+    max-width: 90%;
+    height: 100%;
+    background-color: #fffbfb;
     border-radius: 30px;
     margin-bottom: 20px;
     box-sizing: border-box;
@@ -249,7 +246,7 @@
     border-radius: 5px;
     outline: none;
     transition: background-color 0.3s ease;
-    font-size: 20px;
+    font-size: 15px;
 }
 
 .desc {
@@ -262,7 +259,7 @@
 .desc button {
     margin-left: 5px;
     margin-right: 5px;
-    height: 40px;
+    height: 30px;
     width: 40px;
     background-color: rgb(130, 216, 0);
     cursor: pointer;
@@ -292,14 +289,13 @@
 }
 
 .desc button i {
-    font-size: 20px;
     color: white;
 }
 
 .desc p {
     margin-bottom: 10px;
     margin-right: 20px;
-    font-size: 17px;
+    font-size: 10px;
     color: black;
 }
 .user-count {
@@ -312,12 +308,12 @@
 }
 
 .user-count i {
-    font-size: 17px;
+    font-size: 12px;
     color: gray;
 }
 
 .user-count span {
-    font-size: 15px;
+    font-size: 12px;
     color: gray;
     font-weight: bold;
 }
@@ -327,14 +323,13 @@
 }
 
 .user-count .p-desc {
-    font-size: 17px;
+    font-size: 15px;
     margin-bottom: 10px;
     color: black;
 }
 
 .judul-h1-2 {
     color: red;
-    font-size: 50px;
 }
 
 .harga-akhir-id {
@@ -346,10 +341,10 @@
 }
 
 .content-4 {
-    height: 100vh;
+    background-color: #fff;
+    height: auto;
 }
 .judul-content-4 h1 {
-    font-size: 50px;
     text-align: center;
     font-weight: bold;
     margin-bottom: 50px;
@@ -382,7 +377,7 @@
     box-shadow: 3px 6px 12px rgba(0, 0, 0, 0.1);
 }
 .judul-h1 {
-    font-size: 50px;
+
     color: rgb(213, 213, 2);
 }
 .card-items:nth-child(2) {
@@ -420,12 +415,11 @@
 }
 
 .judul-domain h1 {
-    font-size: 50px;
     color: rgb(1, 189, 1);
 }
 
 .harga-dicoret {
-    font-size: 20px;
+    font-size: 15px;
     text-decoration: line-through;
     color: gray;
     margin-right: 10px;
@@ -457,19 +451,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
-}
-
-.diskon h3 {
-    color: white;
-    background-color: orange;
-    font-size: 20px;
-    width: 150px;
-    height: 30px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 10px;
-    margin: 0;
 }
 
 .isi {
