--- a/src/views/pages/css/login.css
+++ b/src/views/pages/css/login.css
@@ -1,6 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+* {
+    margin: 0;
+    font-family: 'Roboto', sans-serif;
+}
 .container-1 {
     display: grid;
-    grid-template-columns: 1fr 1fr; /* Bagi container menjadi dua kolom */
+    grid-template-columns: 1fr 1fr;
     align-items: center;
     height: 100vh;
 }
@@ -56,11 +61,10 @@
     color: orange;
 }
 .judul-login-1 {
-    margin-bottom: 25px;
-    text-align: center;
+    margin-bottom: 30px;
 }
 .judul-login-1 h2 {
-    font-weight: 400;
+    font-weight: bold;
 }
 .email-input-1 {
     height: 50px;
