--- a/public/layout/css/landing.css
+++ b/public/layout/css/landing.css
@@ -159,7 +159,11 @@ body {
     padding: 30px;
     background-color: #fff;
 }
-
+.fitur p {
+    text-align: center;
+    font-size: 20px;
+    margin-bottom: 30px;
+}
 .content-2 h1 {
     font-weight: bold;
     text-align: center;
